# legacy-codebase-prd-generator

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_FLOW.md  CONFLUENCE_PAGE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_DOCUMENTATION.md  README.md  TEMPORAL_ORCHESTRATION_PAGE.md  cmds.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/PRDs/LE07/: LE07.md  LE07_ImplementationPlan.md  LE07_ImplementationProgress.md  LE07_QA_Guide.md  LE07_Requirements.md  LE07_ReworkPlan.md  LE07_SourceTables.md  LE07_SourceTablesPrompt.md
src/PRDs/LE11/: LE11_Description.md  LE11_Prompt.md  LE11_RequirementsPrompt.md  LE11_SourceTables.md  LE11_SourceTablesPrompt.md
src/agents/: __init__.py  atlassian_integration_agent.py  base_agent.py  code_migration_agent.py  database_analysis_agent.py  prd_aggregator_agent.py  requirements_generator_agent.py  risk_analysis_agent.py  screenshot_analysis_agent.py  user_flow_agent.py
src/cli/: __init__.py  commands.py
src/config/: __init__.py  settings.py
src/db_doc/: Database_DOC.md
src/export_codebase/: dotnet_backend_conversion_prompt.txt  react_frontend_conversion_prompt.txt
src/extractors/: __init__.py  code_extractor.py  jira_extractor.py  minio_extractor.py  prd_extractor.py
src/generators/: __init__.py  prd_generator.py
src/prompts/: __init__.py  atlassian.py  base.py  code_migration.py  database_analysis.py  prd_aggregator.py  requirements.py  risk_analysis.py  screenshot_analysis.py  user_flow.py
src/utils/: __init__.py  business_logic_extractor.py  code_migration_utils.py  data_reconstruction.py  dependency_parser.py  field_mapping_extractor.py  file_utils.py  logging_config.py  migration_guide_generator.py  minio_sync.py  serialization.py  sql_parser.py
src/vector_store/: __init__.py  embeddings.py  qdrant_manager.py
src/worker/: __init__.py  temporal_worker.py
src/workflows/: __init__.py  prd_generation_workflow.py
src/workflows/activities/: __init__.py  aggregation.py  analysis.py  common.py  extraction.py  storage.py
temporal-config/: development-sql.yaml
tests/: __init__.py  test_ast_extractor.py  test_workflow.py
